# qrgen-rust

./: .gitignore  CI_SETUP.md  Cargo.toml  MIGRATION.md  README.md  RELEASE.md  TESTING.md
.github/workflows/: README.md  ci.yml  release.yml
src/: main.rs  templates.rs
tests/: integration_tests.rs
